Updated npm packages and widgets

--- a/src/app/widgets/widget-chart/i18n/en.json
+++ b/src/app/widgets/widget-chart/i18n/en.json
@@ -1,3 +1,4 @@
 {
-	"Average value of the parameter": "Average value of the parameter"
+	"Average value of the parameter": "Average value of the parameter",
+	"No data for the period": ""
 }
