--- a/src/app/widgets/widget-chart/i18n/ru.json
+++ b/src/app/widgets/widget-chart/i18n/ru.json
@@ -1,3 +1,4 @@
 {
-	"Average value of the parameter": "Усредненное значение параметра"
+	"Average value of the parameter": "Усредненное значение параметра",
+	"No data for the period": "Нет данных за период"
 }
