--- a/src/app/widgets/widget-signal/i18n/en.json
+++ b/src/app/widgets/widget-signal/i18n/en.json
@@ -9,5 +9,8 @@
   "Off": "Off",
   "On": "On",
   "Manually": "Manually",
-  "Scheduled": "Scheduled"
+  "Scheduled": "Scheduled",
+  "Not allowed": "Not allowed",
+  "Locked": "Locked",
+  "Not worked": "Not worked"
 }
