--- a/src/app/widgets/widget-signal/i18n/ru.json
+++ b/src/app/widgets/widget-signal/i18n/ru.json
@@ -9,5 +9,8 @@
   "Off": "Выкл",
   "On": "Вкл",
   "Manually": "Ручной",
-  "Scheduled": "По расписанию"
+  "Scheduled": "По расписанию",
+  "Not allowed": "Не доступен",
+  "Locked": "Заблокирован",
+  "Not worked": "Не работоспособен"
 }
